Fixed elbow icon contrast accessibility

--- a/www/docs/style/sass/pages/_section.scss
+++ b/www/docs/style/sass/pages/_section.scss
@@ -548,13 +548,10 @@ span.hi {
   @media (min-width: $medium-screen) {
     margin-left: 70px;
     padding-left: 26px;
-    background-image: url('../img/elbow.png');
-    background-position: 0 3px;
+    background-image: url('../img/elbow.svg');
+    background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 24px;
-    @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
-      background-image: url('../img/elbow@2.png');
-    }
   }
 
   .morecomments {
